--- a/Elon_profile.html
+++ b/Elon_profile.html
@@ -41,7 +41,7 @@
       Musk is one of the <i>richest</i> people in the world.
     </p>
     
-    <a href="https://www.tesla.com/ko_kr"> Tesla </a>
+    <a href="https://www.tesla.com/ko_kr" target="_blank"> Tesla </a>
 
   </body>
 </html>
