--- a/first_index.html
+++ b/first_index.html
@@ -3,48 +3,21 @@
 <html>
     <head>
         <title>My First Website</title>
-
         <meta charset="utf-8">  
-
-        <style>
-            h1 {
-                font-size: 64px;
-                text-align: center;
-            }
-
-            h3 {
-                margin-top: 100px;
-            }
-
-            p i {
-                font-size: 32px;
-
-            }
-
-            img {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            
-        </style>
+        <link href="Css/style.css" rel="stylesheet">
     </head>
 
     <body>
+        <!-- 머리말 -->
         <h1>My First Page</h1>  
         <h2>I love HTML</h2>
         <h3>Hello World!</h3>
 
+        <!-- 마리오 사진 -->
         <img src= "http://www.personal.psu.edu/kbl5192/jpg.jpg" width = "300">
-        
 
-        <p>Lorem ipsum <b>dolor</b> sit amet, consectetur adipiscing elit, 
-            sed do eiusmod <i>tempor</i> incididunt ut labore et dolore magna aliqua.
-        </p>
-
-        <a href="https://google.com" target="_blank">구글로 가는 링크</a>
-        <a href="folder_1/page1.html">page 1</a>
-        <a href="folder_1/folder_2/page2.html">page 2</a>
-        <a href="folder_1/folder_2/page3.html">page 3</a>
+        <p>Super mario!</p>
+        <!-- 피치 링크 -->
+        <a href="peach.html" target = "_blank">피치공주를 찾아보세요!</a>  
     </body>
 </html>
