--- a/first_index.html
+++ b/first_index.html
@@ -17,7 +17,18 @@
         <img src= "http://www.personal.psu.edu/kbl5192/jpg.jpg" width = "300">
 
         <p>Super mario!</p>
-        <!-- 피치 링크 -->
+        <p id="p1">Lorem ipsum dolor sit amet, usu ea deleniti inimicus conceptam. Sit liber feugait consequuntur in, 
+            ea eruditi deseruisse per, in nam malis habemus copiosae. Solum assueverit consequuntur duo eu, 
+            et duo nulla pertinacia sadipscing. 
+            Est dicunt sententiae cu, meliore tincidunt ex vim. Eum no nibh voluptua deserunt.
+        </p>
+        
+        <p id="p2">
+            Lorem ipsum dolor sit amet, usu ea deleniti inimicus conceptam. Sit liber feugait consequuntur in, 
+            ea eruditi deseruisse per, in nam malis habemus copiosae. Solum assueverit consequuntur duo eu, 
+            et duo nulla pertinacia sadipscing. 
+        </p>
+            <!-- 피치 링크 -->
         <a href="peach.html" target = "_blank">피치공주를 찾아보세요!</a>  
     </body>
 </html>
