--- a/baemin_kled/baemin.html
+++ b/baemin_kled/baemin.html
@@ -4,7 +4,7 @@
         <title>코딩의 민족</title>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">    
-        <link rel="stylesheet" href="css/baemin.css">
+        <link rel="stylesheet" href="baemin.css">
     </head>
 
     <body>
@@ -12,7 +12,7 @@
         <h2>넌 코딩할 때가 제일 이뻐</h2>
 
         <div id="menu">
-            <img id="photo" src ="images/chicken.jpeg">
+            <img id="photo" src ="../images/chicken.jpeg">
                 <div id="info">
                 <h3> 코딩에 빠진 닭 </h3> 
                 <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
@@ -21,7 +21,7 @@
         </div>
 
         <div id="menu">
-            <img id="photo" src ="images/sushi.jpeg">
+            <img id="photo" src ="../images/sushi.jpeg">
                 <div id="info">
                 <h3> 코코스시 </h3> 
                 <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
@@ -30,7 +30,7 @@
         </div>
 
         <div id="menu">
-            <img id="photo" src ="images/burger.jpeg">
+            <img id="photo" src ="../images/burger.jpeg">
                 <div id="info">
                 <h3> 코데리아 </h3> 
                 <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
@@ -39,7 +39,7 @@
         </div>
 
         <div id="menu">
-            <img id="photo" src ="images/bibimbap.jpeg">
+            <img id="photo" src ="../images/bibimbap.jpeg">
                 <div id="info">
                 <h3> 코가네 </h3> 
                 <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
