--- a/baemin_kled/baemin.html
+++ b/baemin_kled/baemin.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>코딩의 민족</h1>
-        <h2>넌 코딩할 때가 제일 이뻐</h2>
+        <h2>넌 코딩할 때가 제일 <i>이뻐</i></h2>  
 
         <div id="menu">
             <img id="photo" src ="../images/chicken.jpeg">
