--- a/baemin_kled/baemin.html
+++ b/baemin_kled/baemin.html
@@ -9,43 +9,45 @@
 
     <body>
         <h1>코딩의 민족</h1>
-        <h2>넌 코딩할 때가 제일 <i>이뻐</i></h2>  
-
-        <div id="menu">
-            <img id="photo" src ="../images/chicken.jpeg">
-                <div id="info">
-                <h3> 코딩에 빠진 닭 </h3> 
-                <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
-                <a id="pay" href="#">바로 결제</a>
+        <h2>넌 코딩할 때가 제일 이뻐</h2>  
+        <div class="menu-container">
+            <div class="menu">
+                <img class="photo" src ="../images/chicken.jpeg">
+                    <div class="info">
+                    <h3> 코딩에 빠진 닭 </h3> 
+                    <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
+                    <a id="pay" href="#">바로 결제</a>
+                    </div>
             </div>
-        </div>
 
-        <div id="menu">
-            <img id="photo" src ="../images/sushi.jpeg">
-                <div id="info">
-                <h3> 코코스시 </h3> 
-                <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
-                <a id="pay" href="#">바로 결제</a>
+            <div class="menu">
+                <img class="photo" src ="../images/sushi.jpeg">
+                    <div class="info">
+                    <h3> 코코스시 </h3> 
+                    <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
+                    <a id="pay" href="#">바로 결제</a>
+                    </div>
             </div>
-        </div>
 
-        <div id="menu">
-            <img id="photo" src ="../images/burger.jpeg">
-                <div id="info">
-                <h3> 코데리아 </h3> 
-                <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
-                <a id="pay" href="#">바로 결제</a>
+            <div class="menu">
+                <div class="burger">
+                <img class="photo" src ="../images/burger.jpeg">
+                    <div class="info">
+                        <h3> 코데리아 </h3> 
+                        <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
+                        <a id="pay" href="#">바로 결제</a>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div id="menu">
-            <img id="photo" src ="../images/bibimbap.jpeg">
-                <div id="info">
-                <h3> 코가네 </h3> 
-                <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
-                <a id="pay" href="#">바로 결제</a>
+            <div class="menu">
+                <img class="photo" src ="../images/bibimbap.jpeg">
+                    <div class="info">
+                    <h3> 코가네 </h3> 
+                    <p> 주머니가 가벼운 당신의 마음까지 생각한 착한 가격! </p>
+                    <a id="pay" href="#">바로 결제</a>
+                </div>
             </div>
-        </div>
-            
+        </div>    
     </body>
 </html>
