--- a/hero/hero.html
+++ b/hero/hero.html
@@ -11,6 +11,11 @@
       <a id="logo" href="#">
           <img src="../images/hero_logo.png" height="25">
       </a>
+      <ul id="menu">
+        <li><a id="login" href="#">수업</a></li>
+        <li><a href="#">회원가입</a></li>
+        <li><a href="#">로그인</a></li>
+      </ul>
   </div>
  
   <div class="hero-header">
